--- a/myproject/myapp/templates/home.html
+++ b/myproject/myapp/templates/home.html
@@ -1,25 +1,147 @@
 {%load static%}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crime Hotspots and Patrol Routes</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
+<meta http-equiv='X-UA-Compatible' content='IE=Edge' />
+<meta charset='UTF-8'>
+<title>Crime Hotspots and Patrol Routes</title>
+<meta name='viewport'
+      content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no'/>
+      <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<link rel='stylesheet' type='text/css' href='https://api.tomtom.com/maps-sdk-for-web/cdn/6.x/6.25.1/maps/maps.css'>
+<link rel='stylesheet' type='text/css' href='../assets/ui-library/index.css'/>
+<link rel='stylesheet' type='text/css' href='../assets/ui-library/icons-css/routing.css'/>
+<link rel='stylesheet' type='text/css' href='https://api.tomtom.com/maps-sdk-for-web/cdn/plugins/SearchBox/3.2.0//SearchBox.css'/>
+<script src='https://api.tomtom.com/maps-sdk-for-web/cdn/plugins/SearchBox/3.2.0//SearchBox-web.js'></script>
+</head>
 </head>
 <body>
     <header>
         <h1>Crime Hotspots and Patrol Routes</h1>
     </header>
-    <main>
-        <div id="map"></div>
-    </main>
-    <footer>
-        <p>&copy; 2024 Hackathon Project</p>
-    </footer>
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="{% static 'js/script.js' %}"></script>
+
+<style>
+    #map {
+        height: 500px;
+        width: 100%;
+        margin: 0 auto;
+    }
+    #foldable {
+        width: 320px;
+    }
+    #form {
+        margin-top: 10px;
+    }
+    .icon {
+        background-size: cover;
+        height: 30px;
+        width: 30px;
+    }
+    .tt-icon-size {
+        height: 500px !important;
+        padding: 80px;
+        width: 800px !important;
+    }
+    .icon-spacing-right {
+        margin-right: 12px;
+        margin-top: 22px;
+    }
+    .icon-spacing-left {
+        margin-left: 12px;
+        margin-top: 24px;
+    }
+    .tt-search-box-input {
+        width: calc(100% - 25px) !important;
+    }
+    .searchbox-container {
+        display: flex;
+    }
+
+    .searchbox-container > .tt-search-box {
+        flex: 1;
+        padding-right: 26px;
+    }
+    .my-location-button {
+        background-image: url("https://api.tomtom.com/maps-sdk-for-web/cdn/static/my-location.svg");
+        cursor: pointer;
+        margin-left: 7px;
+        padding: 12px;
+    }
+    .my-location-button:hover {
+        background-image: url("https://api.tomtom.com/maps-sdk-for-web/cdn/static/my-location-hover.svg");
+    }
+    .route-marker {
+        align-items: center;
+        background-color: #4a90e2;
+        border: solid 3px #2faaff;
+        border-radius: 50%;
+        display: flex;
+        height: 32px;
+        justify-content: center;
+        transition: width .1s, height .1s;
+        width: 32px;
+    }
+</style>
+<body>
+<div id='map' class='map'>
+    <div id='foldable' class='tt-overlay-panel -left-top -medium js-foldable'>
+        <form id=form>
+            <div id='startSearchBox' class='searchbox-container'>
+                <div class='tt-icon tt-icon-size icon-spacing-right -start'></div>
+            </div>
+            <div id='finishSearchBox' class='searchbox-container'>
+                <div class='tt-icon tt-icon-size icon-spacing-right -finish'></div>
+            </div>
+        </form>
+    </div>
+</div>
+<script src='https://api.tomtom.com/maps-sdk-for-web/cdn/6.x/6.25.1/maps/maps-web.min.js'></script>
+<script src='https://api.tomtom.com/maps-sdk-for-web/cdn/6.x/6.25.1/services/services-web.min.js'></script>
+<script type='text/javascript' src='../assets/js/mobile-or-tablet.js'></script>
+<script type='text/javascript' src='../assets/js/info-hint.js'></script>
+<script type='text/javascript' src='../assets/js/search/searchbox-enter-submit.js'></script>
+<script type='text/javascript' src='../assets/js/foldable.js'></script>
+<script>
+    var map = tt.map({
+        key: 'vdZkUuKVjGHjPLQfhKGQmH9akt0DROHg',
+        container: 'map',
+
+    });
+    map.addControl(new tt.FullscreenControl());
+    map.addControl(new tt.NavigationControl());
+    new Foldable('#foldable', 'top-right');
+
+    var bounds = new tt.LngLatBounds();
+
+    RoutingAB.prototype.setCloseButton = function() {
+            var inputContainer = document.querySelector('.tt-search-box-input-container');
+            this.closeButton.classList.remove('-hidden');
+
+            if (document.querySelector('.my-location-button')) {
+                inputContainer.replaceChild(this.closeButton, this.upperSearchboxIcon);
+            }
+        };
+
+        RoutingAB.prototype.switchToMyLocationButton = function() {
+            var inputContainer = document.querySelector('.tt-search-box-input-container');
+            inputContainer.replaceChild(this.upperSearchboxIcon, this.closeButton);
+        };
+
+        RoutingAB.prototype.findFirstBuildingLayerId = function() {
+            var layers = map.getStyle().layers;
+            for (var index in layers) {
+                if (layers[index].type === 'fill-extrusion') {
+                    return layers[index].id;
+                }
+            }
+
+            throw new Error('Map style does not contain any layer with fill-extrusion type.');
+        };
+
+        new RoutingAB();
+    </script>
+<footer>
+    <p>&copy; 2024 Hackathon Project</p>
+</footer>
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
