--- a/myproject/myapp/static/css/styles.css
+++ b/myproject/myapp/static/css/styles.css
@@ -21,16 +21,45 @@ main {
     padding: 1rem;
 }
 
-#map {
-    width: 100%;
-    height: 500px;
-    max-width: 800px;
-    border: 2px solid #333;
-}
-
 footer {
     background-color: #333;
     color: white;
     text-align: center;
     padding: 1rem;
+}
+
+#map {
+    height: 500px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+#foldable {
+    width: 320px;
+}
+
+#form {
+    margin-top: 10px;
+}
+
+.icon {
+    background-size: cover;
+    height: 30px;
+    width: 30px;
+}
+
+.tt-icon-size {
+    height: 500px !important;
+    padding: 80px;
+    width: 800px !important;
+}
+
+.icon-spacing-right {
+    margin-right: 12px;
+    margin-top: 22px;
+}
+
+.icon-spacing-left {
+    margin-left: 12px;
+    margin-top: 24px;
 }
