--- a/myproject/myapp/static/css/styles.css
+++ b/myproject/myapp/static/css/styles.css
@@ -30,16 +30,8 @@ footer {
 
 #map {
     height: 500px;
-    width: 100%;
+    width: 60%;
     margin: 0 auto;
-}
-
-#foldable {
-    width: 320px;
-}
-
-#form {
-    margin-top: 10px;
 }
 
 .icon {
@@ -62,4 +54,18 @@ footer {
 .icon-spacing-left {
     margin-left: 12px;
     margin-top: 24px;
+}
+
+.custom-marker {
+width: 20px;
+height: 20px;
+background-color: rgba(255, 0, 0, 0.5);
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-size: 14px;
+font-weight: bold;
+text-align: center;
 }
