--- a/myproject/myapp/templates/home.html
+++ b/myproject/myapp/templates/home.html
@@ -58,9 +58,13 @@
 
         // List of markers
         var markers = [
-            { lngLat: [103.8918, 1.3201], title: 'Geylang' },
-            { lngLat: [103.83183, 1.304833], title: 'Orchard' },
-            { lngLat: [103.851959, 1.290270], title: 'Marina Bay' },
+            { lngLat: [103.84508966643547, 1.3850969869082566], title: 'AMK' },
+            { lngLat: [103.93716055293469, 1.3328855285307624], title: 'Bedok' },
+            { lngLat: [103.83975222595029, 1.278604029532352], title: 'Central' },
+            { lngLat: [103.70234408177062, 1.3511457864334573], title: 'Jurong' },
+            { lngLat: [103.84670982409857, 1.3123442012770405], title: 'Tanglin' },
+            { lngLat: [103.77883793759092, 1.4332850043061145], title: 'Woodlands' },
+            { lngLat: [103.98103923150593, 1.3431877727562795], title: 'Airport' },
         ];
 
         // Add markers to the map
