Changed html names to match division

--- a/myproject/myapp/templates/home.html
+++ b/myproject/myapp/templates/home.html
@@ -55,7 +55,7 @@
             markerButton.className = 'custom-marker';
             markerButton.title = title;
             markerButton.onclick = function() {
-                window.open(url, '_blank'); // Opens the URL in a new tab
+                window.open(url, '_self'); // Opens the URL in a new tab
             }
 
             new tt.Marker({
